# rust-wasm-react

./: .gitignore  README.md  run.sh
astate/: .gitignore  Cargo.toml  build.sh
astate/src/: Dictionary.js  lib.rs  owl.js
www/: .babelrc  .gitignore  build.sh  index.html  main.css  package-lock.json  package.json  webpack.config.js
www/src/: Dictionary.js  Main.js  index.js
www/src/component/: ChatBox.js  SquareBox.js
www/wasm/: astate.d.ts  astate.js  astate_bg.d.ts  astate_bg.wasm  owl.js
