[package]
name    = "astate"
version = "0.1.0"
authors = ["Cheng Li <cli@tempo.io>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if       = "0.1.2"                                                                                               
wasm-bindgen = "0.2.29"                                                                                              
web-sys      = { version = "0.3.6", features = ['console','Document','Element','HtmlElement','Node','Window'] }
js-sys       = "0.3.6"                                                                                               

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
